samples/_failures_safe/1761140811_bd8e45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d704eb7.c: In function ‘main’:
./samples/SAFE/__tmp_2d704eb7.c:157:17: error: expected ‘,’ or ‘;’ at end of input
  157 |                 int status = add_matrices
      |                 ^~~
./samples/SAFE/__tmp_2d704eb7.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d704eb7.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d704eb7.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2d704eb7.c:157:17: error: expected declaration or statement at end of input
